--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <center><h1>Mis aficiones e intereses cinematográficos</h1></center>
+    <h2>Nombre del estudiante:</h2>
 </body>
 </html>
