--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <center><h1>Mis aficiones e intereses cinematográficos</h1></center>
     <h2>Nombre del estudiante:</h2>
+    <h3>Nicolle Trujillo Albor</h3>
 </body>
 </html>
