--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <center><h1>Mis aficiones e intereses cinematográficos</h1></center>
     <h2>Nombre del estudiante:</h2>
     <h3>Nicolle Trujillo Albor</h3>
+    <h2>Semestre que cursa:</h2>
 </body>
 </html>
