--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h3>Nicolle Trujillo Albor</h3>
     <h2>Semestre que cursa:</h2>
     <h3>Cuarto semestre</h3>
+    <h2>Hobbies del estudiante:</h2>
 </body>
 </html>
