--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <h2>Semestre que cursa:</h2>
     <h3>Cuarto semestre</h3>
     <h2>Hobbies del estudiante:</h2>
+    <h3>1. Jugar Parchis</h3>
 </body>
 </html>
