--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <h3>Cuarto semestre</h3>
     <h2>Hobbies del estudiante:</h2>
     <h3>1. Jugar Parchis</h3>
+    <h3>2. Ver Series/Cine</h3>
 </body>
 </html>
