--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <h2>Hobbies del estudiante:</h2>
     <h3>1. Jugar Parchis</h3>
     <h3>2. Ver Series/Cine</h3>
+    <h3>3. Escuchar música</h3>
 </body>
 </html>
