--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <h3>1. Jugar Parchis</h3>
     <h3>2. Ver Series/Cine</h3>
     <h3>3. Escuchar música</h3>
+    <h3>4. Yoga</h3>
 </body>
 </html>
