--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <h3>2. Ver Series/Cine</h3>
     <h3>3. Escuchar música</h3>
     <h3>4. Yoga</h3>
+    <h2>Series favoritas del estudiante</h2>
 </body>
 </html>
