--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <h3>3. Escuchar música</h3>
     <h3>4. Yoga</h3>
     <h2>Series favoritas del estudiante</h2>
+    <h3>1. Shameless</h3>
 </body>
 </html>
