--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     <h2>Series favoritas del estudiante</h2>
     <h3>1. Shameless</h3>
     <img src="https://m.media-amazon.com/images/I/81kP5z5ntML._AC_UF894,1000_QL80_.jpg" alt="" style="width: 80%; max-width: 400px;">
+    <h3>2. Gambito de Dama</h3>
 </body>
 </html>
